--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Final exam app</string>
     <string name="intro_text">Hello, you are in the Final Exam App!</string>
+    <string name="welcome_message">welcome</string>
+    <string name="snackbar_message">this is your snicky snack</string>
 </resources>
