--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,13 @@
     <string name="app_name">Final exam app</string>
     <string name="intro_text">Hello, you are in the Final Exam App!</string>
     <string name="welcome_message">welcome</string>
-    <string name="snackbar_message">this is your snicky snack</string>
+    <string name="snackbar_message">This is a Snackbar message.</string>
+    <string name="snackbar_action_text">Click Me</string>
+    <string name="snackbar_action_toast">Action clicked!</string>
 </resources>
+
+
+<!--<resources>
+<string name="welcome_message">Welcome to the app!</string>
+
+</resources>-->
